<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.memory.MemoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/process_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/process_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/process_name" />

            <Button
                android:id="@+id/select_apps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/process_text"
                android:text="@string/select_process" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/libName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/process_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/elf_name"
                android:text="@string/libil2cpp" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/flagCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/check_flag_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/libName" />

        <CheckBox
            android:id="@+id/autoFix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/libName"
            android:layout_marginTop="6dp"
            android:minHeight="48dp"
            android:text="@string/fix_elf_result"
            app:layout_constraintTop_toBottomOf="@+id/flagCheck" />

        <Switch
            android:id="@+id/archELF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/arch_abi_32_bit_or_64_bit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoFix" />

        <CheckBox
            android:id="@+id/metadata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dump_global_metadata_dat"
            app:layout_constraintTop_toBottomOf="@+id/archELF" />


        <Button
            android:id="@+id/dumpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/dump"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/metadata" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
